improvement display datepicker for mobile and desktop

--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,12 @@
   opacity: 0;
 }
 
+@media screen and (max-width: 768px) {
+  .show-panel {
+    display: none;
+  }
+}
+
 .slide-panel {
   visibility: visible;
   opacity: 1;
@@ -63,4 +69,26 @@
 
 .full-screen-show {
   transform: translateY(0);
+}
+.full-screen-panel {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: -200px;
+  z-index: 1101;
+  background-color: white;
+  transition: all .6s;
+  transform: translateY(100%);
+}
+
+.show {
+  transform: none;
+}
+
+@media screen and (min-width: 769px) {
+  .full-screen-panel {
+      display: none;
+  }
+  
 }
